# clarence

./: .gitignore  CLAUDE.md  LICENSE  README.md  env.example  index.js  package.json  pyproject.toml
src/clarence/: agent.py  cli.py  mcp_client.py  model.py  prompts.py  risk.py  scanner.py  schemas.py
src/clarence/tools/: __init__.py
src/clarence/tools/finance/: metrics.py  news.py
src/clarence/utils/: help.py  intro.py  logger.py  profile.py  scoring.py  ui.py
